# advent-of-code

./: .gitignore  Manifest.toml  Project.toml  README.md  aoc2016.cabal  day01.py  day01.rs  day02.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day14.py  day15.py  day16.py  day18.py  day19.py  day20.py  day21.py  day22.py  day25.py  requirements.txt  run.sh  run_hs.sh  run_julia.sh  run_rs.sh  run_utils.sh
2015/: day01.jl  day02.jl  day03.jl  day04.jl  day05.jl  day06.jl  day07.jl  day08.jl  day09.jl  day10.jl  day11.jl  day12.jl  day13.jl  day14.jl  day15.jl  day16.jl  day17.jl  day18.jl  day19.jl  day20.jl  day21.jl  day22.jl  day23.jl  day24.jl  day25.jl
2016/: Day04.hs  Day05.hs  Day08.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  day01.hs  day02.hs  day03.hs  day04.hs  day05.hs  day06.hs  day07.hs  day08.hs  day09.hs  day10.hs  day11.hs  day12.hs  day13.hs
2017/: Cargo.toml  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  main.rs
2021/: day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day23.py  day24.py
2022/: day01.py  day01.rs  day02.py  day03.py  (+12 more)
(+78 files in other folders)
